@@ -6,12 +6,17 @@ module Preferences
     
     def initialize(name, *args) #:nodoc:
       options = args.extract_options!
-      options.assert_valid_keys(:default)
+      options.assert_valid_keys(:default, :group_defaults)
       
       @type = args.first ? args.first.to_sym : :boolean
       
       # Create a column that will be responsible for typecasting
       @column = ActiveRecord::ConnectionAdapters::Column.new(name.to_s, options[:default], @type == :any ? nil : @type.to_s)
+      
+      @group_defaults = (options[:group_defaults] || {}).inject({}) do |defaults, (group, default)|
+        defaults[group.is_a?(Symbol) ? group.to_s : group] = type_cast(default)
+        defaults
+      end
     end
     
     # The name of the preference
@@ -21,8 +26,8 @@ module Preferences
     
     # The default value to use for the preference in case none have been
     # previously defined
-    def default_value
-      @column.default
+    def default_value(group = nil)
+      @group_defaults.include?(group) ? @group_defaults[group] : @column.default
     end
     
     # Determines whether column backing this preference stores numberic values
