@@ -157,7 +157,6 @@ class PreferenceAfterBeingCreatedTest < ActiveSupport::TestCase
   
   def teardown
     User.preference_definitions.delete('notifications')
-    User.default_preferences.delete('notifications')
   end
 end
 
@@ -210,7 +209,6 @@ class PreferenceWithBooleanTypeTest < ActiveSupport::TestCase
   
   def teardown
     User.preference_definitions.delete('notifications')
-    User.default_preferences.delete('notifications')
   end
 end
 
